--- a/docs/visual-basic/misc/bc30201.md
+++ b/docs/visual-basic/misc/bc30201.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30201
 ms.assetid: 8a88e595-b590-4b05-bed3-8d04ba12d838
-ms.openlocfilehash: a76c662860618c1d9a03249326c486c39f515931
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: f03abbab2c8869cf890f97ff7adc2d8140909659
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33606677"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54634326"
 ---
-# <a name="expression-expected"></a><span data-ttu-id="f1528-102">식이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="f1528-102">Expression expected</span></span>
-<span data-ttu-id="f1528-103">`+` 또는 `=` 등의 연산자에는 오른쪽 피연산자에 대한 식이 필요하지만 인식할 수 있는 식이 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f1528-103">An operator such as `+` or `=` requires an expression for its right operand, but no recognizable expression appears.</span></span>  
+# <a name="expression-expected"></a><span data-ttu-id="37525-102">식이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="37525-102">Expression expected</span></span>
+<span data-ttu-id="37525-103">`+` 또는 `=` 등의 연산자에는 오른쪽 피연산자에 대한 식이 필요하지만 인식할 수 있는 식이 없습니다.</span><span class="sxs-lookup"><span data-stu-id="37525-103">An operator such as `+` or `=` requires an expression for its right operand, but no recognizable expression appears.</span></span>  
   
- <span data-ttu-id="f1528-104">**오류 ID:** BC30201</span><span class="sxs-lookup"><span data-stu-id="f1528-104">**Error ID:** BC30201</span></span>  
+ <span data-ttu-id="37525-104">**오류 ID:** BC30201</span><span class="sxs-lookup"><span data-stu-id="37525-104">**Error ID:** BC30201</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f1528-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f1528-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="37525-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="37525-105">To correct this error</span></span>  
   
--   <span data-ttu-id="f1528-106">연산자의 오른쪽 피연산자에 대한 유효한 식을 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="f1528-106">Supply a valid expression for the right operand of the operator.</span></span>  
+-   <span data-ttu-id="37525-106">연산자의 오른쪽 피연산자에 대한 유효한 식을 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="37525-106">Supply a valid expression for the right operand of the operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f1528-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="f1528-107">See Also</span></span>  
- [<span data-ttu-id="f1528-108">연산자 및 식</span><span class="sxs-lookup"><span data-stu-id="f1528-108">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)  
- [<span data-ttu-id="f1528-109">대입 연산자 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="f1528-109">Assignment operators (Visual Basic)</span></span>](~/docs/visual-basic/language-reference/operators/assignment-operators.md)
+## <a name="see-also"></a><span data-ttu-id="37525-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="37525-107">See also</span></span>
+- [<span data-ttu-id="37525-108">연산자 및 식</span><span class="sxs-lookup"><span data-stu-id="37525-108">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [<span data-ttu-id="37525-109">할당 연산자 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="37525-109">Assignment operators (Visual Basic)</span></span>](~/docs/visual-basic/language-reference/operators/assignment-operators.md)
