--- a/docs/visual-basic/misc/bc30632.md
+++ b/docs/visual-basic/misc/bc30632.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30632
 ms.assetid: 0c3dd065-566b-485c-9996-6177eb0fde39
-ms.openlocfilehash: 69b1ea03470950f7edc71316371e54f69736239d
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 69b225ce6f1a6719ecb87a8e9774785b55ac1e1c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53778380"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54631479"
 ---
-# <a name="end-set-must-be-preceded-by-a-matching-set"></a><span data-ttu-id="b1b8d-102">'End Set'은 짝이 되는 'Set' 뒤에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b1b8d-102">'End Set' must be preceded by a matching 'Set'</span></span>
-<span data-ttu-id="b1b8d-103">`End Set`은 `Set` 속성 프로시저를 종료하는 데 사용됩니다.</span><span class="sxs-lookup"><span data-stu-id="b1b8d-103">`End Set` is used to terminate `Set` property procedures.</span></span> <span data-ttu-id="b1b8d-104">`End Set` 속성 프로시저 외부에서 `Set` 구문이 발생했습니다.</span><span class="sxs-lookup"><span data-stu-id="b1b8d-104">The `End Set` construct was encountered outside a `Set` property procedure.</span></span>  
+# <a name="end-set-must-be-preceded-by-a-matching-set"></a><span data-ttu-id="79c73-102">'End Set'은 짝이 되는 'Set' 뒤에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="79c73-102">'End Set' must be preceded by a matching 'Set'</span></span>
+<span data-ttu-id="79c73-103">`End Set` 는 `Set` 속성 프로시저를 종료하는 데 사용됩니다.</span><span class="sxs-lookup"><span data-stu-id="79c73-103">`End Set` is used to terminate `Set` property procedures.</span></span> <span data-ttu-id="79c73-104">`End Set` 속성 프로시저 외부에서 `Set` 구문이 발생했습니다.</span><span class="sxs-lookup"><span data-stu-id="79c73-104">The `End Set` construct was encountered outside a `Set` property procedure.</span></span>  
   
- <span data-ttu-id="b1b8d-105">**오류 ID:** BC30632</span><span class="sxs-lookup"><span data-stu-id="b1b8d-105">**Error ID:** BC30632</span></span>  
+ <span data-ttu-id="79c73-105">**오류 ID:** BC30632</span><span class="sxs-lookup"><span data-stu-id="79c73-105">**Error ID:** BC30632</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b1b8d-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b1b8d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="79c73-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="79c73-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="b1b8d-107">`Set` 속성 프로시저가 `Property` 키워드 뒤와 `End Property` 구문 앞에서 선언되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="b1b8d-107">Make sure that the `Set` property procedure is declared after a `Property` keyword and before the `End Property` construct.</span></span>  
+1.  <span data-ttu-id="79c73-107">`Set` 속성 프로시저가 `Property` 키워드 뒤와 `End Property` 구문 앞에서 선언되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="79c73-107">Make sure that the `Set` property procedure is declared after a `Property` keyword and before the `End Property` construct.</span></span>  
   
-2.  <span data-ttu-id="b1b8d-108">`Set` 속성 프로시저가 `Set` 키워드로 시작하고 `End Set` 구문으로 끝나는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="b1b8d-108">Make sure that the `Set` property procedure begins with the `Set` keyword and ends with an `End Set` construct.</span></span>  
+2.  <span data-ttu-id="79c73-108">`Set` 속성 프로시저가 `Set` 키워드로 시작하고 `End Set` 구문으로 끝나는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="79c73-108">Make sure that the `Set` property procedure begins with the `Set` keyword and ends with an `End Set` construct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b1b8d-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b1b8d-109">See Also</span></span>  
- [<span data-ttu-id="b1b8d-110">Property 문</span><span class="sxs-lookup"><span data-stu-id="b1b8d-110">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)  
+## <a name="see-also"></a><span data-ttu-id="79c73-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="79c73-109">See also</span></span>
+- [<span data-ttu-id="79c73-110">Property 문</span><span class="sxs-lookup"><span data-stu-id="79c73-110">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
 
