--- a/docs/visual-basic/misc/bc31169.md
+++ b/docs/visual-basic/misc/bc31169.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31169
 ms.assetid: 94a5614f-6329-4144-bc41-c94c81fe7b90
-ms.openlocfilehash: 050df3d922e57903e888dcf87e56baf50eb888eb
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 59e99f1aaf433e1c7c9bc7542866bc19c419d4aa
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53780324"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54624311"
 ---
-# <a name="character-character-0xlthexadecimalgt-is-not-allowed-at-the-beginning-of-an-xml-name"></a><span data-ttu-id="23a49-102">'Character' 문자 (0x&lt;16 진수&gt;) XML 이름의 시작 부분에 허용 되지 않습니다</span><span class="sxs-lookup"><span data-stu-id="23a49-102">Character 'character' (0x&lt;hexadecimal&gt;) is not allowed at the beginning of an XML name</span></span>
-<span data-ttu-id="23a49-103">XML 리터럴 또는 XML 축 속성의 이름의 시작 부분에 지원되지 않는 문자가 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="23a49-103">An unsupported character is included at the beginning of the name of an XML literal or an XML axis property.</span></span>  
+# <a name="character-character-0xlthexadecimalgt-is-not-allowed-at-the-beginning-of-an-xml-name"></a><span data-ttu-id="4b042-102">'Character' 문자 (0x&lt;16 진수&gt;) XML 이름의 시작 부분에 허용 되지 않습니다</span><span class="sxs-lookup"><span data-stu-id="4b042-102">Character 'character' (0x&lt;hexadecimal&gt;) is not allowed at the beginning of an XML name</span></span>
+<span data-ttu-id="4b042-103">XML 리터럴 또는 XML 축 속성의 이름의 시작 부분에 지원되지 않는 문자가 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="4b042-103">An unsupported character is included at the beginning of the name of an XML literal or an XML axis property.</span></span>  
   
- <span data-ttu-id="23a49-104">**오류 ID:** BC31169</span><span class="sxs-lookup"><span data-stu-id="23a49-104">**Error ID:** BC31169</span></span>  
+ <span data-ttu-id="4b042-104">**오류 ID:** BC31169</span><span class="sxs-lookup"><span data-stu-id="4b042-104">**Error ID:** BC31169</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="23a49-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="23a49-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4b042-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4b042-105">To correct this error</span></span>  
   
--   <span data-ttu-id="23a49-106">XML 리터럴 또는 XML 축 속성의 이름의 시작 부분에서 지원되지 않는 문자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="23a49-106">Remove the unsupported character from the beginning of the name of the XML literal or XML axis property.</span></span>  
+-   <span data-ttu-id="4b042-106">XML 리터럴 또는 XML 축 속성의 이름의 시작 부분에서 지원되지 않는 문자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="4b042-106">Remove the unsupported character from the beginning of the name of the XML literal or XML axis property.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="23a49-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="23a49-107">See Also</span></span>  
- [<span data-ttu-id="23a49-108">선언된 XML 요소 및 특성의 이름</span><span class="sxs-lookup"><span data-stu-id="23a49-108">Names of Declared XML Elements and Attributes</span></span>](../../visual-basic/programming-guide/language-features/xml/names-of-declared-xml-elements-and-attributes.md)  
- [<span data-ttu-id="23a49-109">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="23a49-109">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="23a49-110">XML</span><span class="sxs-lookup"><span data-stu-id="23a49-110">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="4b042-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="4b042-107">See also</span></span>
+- [<span data-ttu-id="4b042-108">선언된 XML 요소 및 특성의 이름</span><span class="sxs-lookup"><span data-stu-id="4b042-108">Names of Declared XML Elements and Attributes</span></span>](../../visual-basic/programming-guide/language-features/xml/names-of-declared-xml-elements-and-attributes.md)
+- [<span data-ttu-id="4b042-109">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="4b042-109">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
+- [<span data-ttu-id="4b042-110">XML</span><span class="sxs-lookup"><span data-stu-id="4b042-110">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
