--- a/docs/visual-basic/misc/bc31503.md
+++ b/docs/visual-basic/misc/bc31503.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC31503
 ms.assetid: 9979f794-5d6d-4cc6-a2ec-303078626c0f
-ms.openlocfilehash: 4198730f84377b5c419d0341e440ef58ddf066cb
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 859ab32fe19ceacd0532265b4afb864f63ead92a
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761162"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54609540"
 ---
-# <a name="lttypenamegt-cannot-be-used-as-an-attribute-because-it-is-not-a-class"></a><span data-ttu-id="8ab34-102">'&lt;typename&gt;' 클래스가 아니므로 특성으로 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8ab34-102">'&lt;typename&gt;' cannot be used as an attribute because it is not a class</span></span>
-<span data-ttu-id="8ab34-103">클래스가 아닌 형식을 특성으로 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="8ab34-103">An attempt was made to use a type that is not a class as an attribute.</span></span>  
+# <a name="lttypenamegt-cannot-be-used-as-an-attribute-because-it-is-not-a-class"></a><span data-ttu-id="b5724-102">'&lt;typename&gt;' 클래스가 아니므로 특성으로 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b5724-102">'&lt;typename&gt;' cannot be used as an attribute because it is not a class</span></span>
+<span data-ttu-id="b5724-103">클래스가 아닌 형식을 특성으로 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="b5724-103">An attempt was made to use a type that is not a class as an attribute.</span></span>  
   
- <span data-ttu-id="8ab34-104">**오류 ID:** BC31503</span><span class="sxs-lookup"><span data-stu-id="8ab34-104">**Error ID:** BC31503</span></span>  
+ <span data-ttu-id="b5724-104">**오류 ID:** BC31503</span><span class="sxs-lookup"><span data-stu-id="b5724-104">**Error ID:** BC31503</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8ab34-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8ab34-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b5724-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b5724-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="8ab34-106">사용자 지정 특성을 `System.Attribute`에서 파생되는 클래스로 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="8ab34-106">Define custom attributes as classes that derive from `System.Attribute`.</span></span>  
+1.  <span data-ttu-id="b5724-106">사용자 지정 특성을 `System.Attribute`에서 파생되는 클래스로 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="b5724-106">Define custom attributes as classes that derive from `System.Attribute`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8ab34-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="8ab34-107">See Also</span></span>  
- [<span data-ttu-id="8ab34-108">특성 개요</span><span class="sxs-lookup"><span data-stu-id="8ab34-108">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+## <a name="see-also"></a><span data-ttu-id="b5724-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="b5724-107">See also</span></span>
+- [<span data-ttu-id="b5724-108">특성 개요</span><span class="sxs-lookup"><span data-stu-id="b5724-108">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
