--- a/docs/visual-basic/misc/bc31511.md
+++ b/docs/visual-basic/misc/bc31511.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31511
 ms.assetid: f8c958f6-58a4-4aff-b8c3-f2e9481e8132
-ms.openlocfilehash: d71f1a2497b1f171578b057b4f0a2632076fb17c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 01e6e971bdd354997b60c648543817abfe64957f
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53758419"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54633818"
 ---
-# <a name="attribute-member-ltmembernamegt-cannot-be-the-target-of-an-assignment-because-it-is-not-declared-public"></a><span data-ttu-id="878f0-102">특성 멤버 '&lt;membername&gt;' 'Public' 선언 되지 않았으므로 할당 대상일 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="878f0-102">Attribute member '&lt;membername&gt;' cannot be the target of an assignment because it is not declared 'Public'</span></span>
-<span data-ttu-id="878f0-103">특성의 전용 멤버에 값을 할당하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="878f0-103">An attempt was made to assign a value to a private member of an attribute.</span></span>  
+# <a name="attribute-member-ltmembernamegt-cannot-be-the-target-of-an-assignment-because-it-is-not-declared-public"></a><span data-ttu-id="dc6d3-102">특성 멤버 '&lt;membername&gt;' 'Public' 선언 되지 않았으므로 할당 대상일 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="dc6d3-102">Attribute member '&lt;membername&gt;' cannot be the target of an assignment because it is not declared 'Public'</span></span>
+<span data-ttu-id="dc6d3-103">특성의 전용 멤버에 값을 할당하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="dc6d3-103">An attempt was made to assign a value to a private member of an attribute.</span></span>  
   
- <span data-ttu-id="878f0-104">**오류 ID:** BC31511</span><span class="sxs-lookup"><span data-stu-id="878f0-104">**Error ID:** BC31511</span></span>  
+ <span data-ttu-id="dc6d3-104">**오류 ID:** BC31511</span><span class="sxs-lookup"><span data-stu-id="dc6d3-104">**Error ID:** BC31511</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="878f0-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="878f0-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dc6d3-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="dc6d3-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="878f0-106">할당을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="878f0-106">Remove the assignment.</span></span>  
+1.  <span data-ttu-id="dc6d3-106">할당을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="dc6d3-106">Remove the assignment.</span></span>  
   
-2.  <span data-ttu-id="878f0-107">개발한 사용자 지정 특성을 사용하는 경우 특성 멤버의 액세스 한정자를 `Public`으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="878f0-107">If using custom attributes that you developed, change the attribute member's access modifier to `Public`.</span></span>  
+2.  <span data-ttu-id="dc6d3-107">개발한 사용자 지정 특성을 사용하는 경우 특성 멤버의 액세스 한정자를 `Public`으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="dc6d3-107">If using custom attributes that you developed, change the attribute member's access modifier to `Public`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="878f0-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="878f0-108">See Also</span></span>  
- [<span data-ttu-id="878f0-109">특성 개요</span><span class="sxs-lookup"><span data-stu-id="878f0-109">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)  
- [<span data-ttu-id="878f0-110">공용</span><span class="sxs-lookup"><span data-stu-id="878f0-110">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
+## <a name="see-also"></a><span data-ttu-id="dc6d3-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="dc6d3-108">See also</span></span>
+- [<span data-ttu-id="dc6d3-109">특성 개요</span><span class="sxs-lookup"><span data-stu-id="dc6d3-109">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="dc6d3-110">공용</span><span class="sxs-lookup"><span data-stu-id="dc6d3-110">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
