--- a/docs/visual-basic/misc/bc42018.md
+++ b/docs/visual-basic/misc/bc42018.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC42018
 ms.assetid: 3fc640a7-7dab-4c14-b25d-a5794dbba59d
-ms.openlocfilehash: b68635ab57383a24f2f76557f5e107aba7b8f333
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 9056fea2a9274404e692942affd5942572213ef7
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775956"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54516878"
 ---
-# <a name="operands-of-type-object-used-for-operator-ltoperatorsymbolgt-use-the-is-operator-to-test-object-identity"></a><span data-ttu-id="d30ce-102">개체 연산자에 대해 사용 되는 형식의 피연산자가 '&lt;operatorsymbol&gt;'; 'Is' 연산자를 사용 하 여 개체 id를 테스트 하려면</span><span class="sxs-lookup"><span data-stu-id="d30ce-102">Operands of type Object used for operator '&lt;operatorsymbol&gt;'; use the 'Is' operator to test object identity</span></span>
-<span data-ttu-id="d30ce-103">식은 `=` 의 하나 또는 두 피연산자와 함께 [=](../../visual-basic/language-reference/data-types/object-data-type.md)를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-103">An expression uses the `=` with one or both operands of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
+# <a name="operands-of-type-object-used-for-operator-ltoperatorsymbolgt-use-the-is-operator-to-test-object-identity"></a><span data-ttu-id="e46e3-102">개체 연산자에 대해 사용 되는 형식의 피연산자가 '&lt;operatorsymbol&gt;'; 'Is' 연산자를 사용 하 여 개체 id를 테스트 하려면</span><span class="sxs-lookup"><span data-stu-id="e46e3-102">Operands of type Object used for operator '&lt;operatorsymbol&gt;'; use the 'Is' operator to test object identity</span></span>
+<span data-ttu-id="e46e3-103">식은 `=` 의 하나 또는 두 피연산자와 함께 [=](../../visual-basic/language-reference/data-types/object-data-type.md)를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-103">An expression uses the `=` with one or both operands of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
   
- <span data-ttu-id="d30ce-104">`Is` 또는 `IsNot` 연산자를 사용하여 두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-104">You should use the `Is` or `IsNot` operator to determine whether two object references refer to the same object instance.</span></span> <span data-ttu-id="d30ce-105">[Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)에서 "개체 비교"를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="d30ce-105">See "Comparing Objects" in [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md).</span></span>  
+ <span data-ttu-id="e46e3-104">`Is` 또는 `IsNot` 연산자를 사용하여 두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-104">You should use the `Is` or `IsNot` operator to determine whether two object references refer to the same object instance.</span></span> <span data-ttu-id="e46e3-105">[Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)에서 "개체 비교"를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="e46e3-105">See "Comparing Objects" in [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md).</span></span>  
   
- <span data-ttu-id="d30ce-106">변수나 식이 `Object`로 평가되는 경우 컴파일러가 *런타임에 바인딩*을 수행해야 하므로 런타임에 추가 작업이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-106">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="d30ce-107">또한 응용 프로그램이 잠재적인 런타임 오류에 노출됩니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-107">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="d30ce-108">예를 들어 <xref:System.Windows.Forms.Form> 변수에 `Object` 을 할당하여 `=` 연산자에서 사용하려고 하는 경우 Visual Basic은 <xref:System.InvalidCastException> 개체를 값 비교에 적합한 데이터 형식으로 변환할 수 없기 때문에 런타임이 <xref:System.Windows.Forms.Form> 을 throw합니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-108">For example, if you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to use it with the `=` operator, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a data type suitable for value comparison.</span></span> <span data-ttu-id="d30ce-109">두 피연산자가 <xref:System.Windows.Forms.Form>형식으로 평가되더라도 `=` 가 <xref:System.Windows.Forms.Form> 피연산자에 대해 정의되지 않았기 때문에 작업이 실패합니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-109">Even if both operands evaluate to type <xref:System.Windows.Forms.Form>, the operation fails because `=` is not defined for <xref:System.Windows.Forms.Form> operands.</span></span>  
+ <span data-ttu-id="e46e3-106">변수나 식이 `Object`로 평가되는 경우 컴파일러가 *런타임에 바인딩*을 수행해야 하므로 런타임에 추가 작업이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-106">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="e46e3-107">또한 애플리케이션이 잠재적인 런타임 오류에 노출됩니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-107">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="e46e3-108">예를 들어 <xref:System.Windows.Forms.Form> 변수에 `Object` 을 할당하여 `=` 연산자에서 사용하려고 하는 경우 Visual Basic은 <xref:System.InvalidCastException> 개체를 값 비교에 적합한 데이터 형식으로 변환할 수 없기 때문에 런타임이 <xref:System.Windows.Forms.Form> 을 throw합니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-108">For example, if you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to use it with the `=` operator, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a data type suitable for value comparison.</span></span> <span data-ttu-id="e46e3-109">두 피연산자가 <xref:System.Windows.Forms.Form>형식으로 평가되더라도 `=` 가 <xref:System.Windows.Forms.Form> 피연산자에 대해 정의되지 않았기 때문에 작업이 실패합니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-109">Even if both operands evaluate to type <xref:System.Windows.Forms.Form>, the operation fails because `=` is not defined for <xref:System.Windows.Forms.Form> operands.</span></span>  
   
- <span data-ttu-id="d30ce-110">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-110">By default, this message is a warning.</span></span> <span data-ttu-id="d30ce-111">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="d30ce-111">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="e46e3-110">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-110">By default, this message is a warning.</span></span> <span data-ttu-id="e46e3-111">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="e46e3-111">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="d30ce-112">**오류 ID:** BC42018</span><span class="sxs-lookup"><span data-stu-id="d30ce-112">**Error ID:** BC42018</span></span>  
+ <span data-ttu-id="e46e3-112">**오류 ID:** BC42018</span><span class="sxs-lookup"><span data-stu-id="e46e3-112">**Error ID:** BC42018</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d30ce-113">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d30ce-113">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e46e3-113">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e46e3-113">To correct this error</span></span>  
   
--   <span data-ttu-id="d30ce-114">두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인하려면 `Is` 또는 `IsNot` 연산자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-114">If you want to determine whether two object references refer to the same object instance, use the `Is` or `IsNot` operator.</span></span>  
+-   <span data-ttu-id="e46e3-114">두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인하려면 `Is` 또는 `IsNot` 연산자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-114">If you want to determine whether two object references refer to the same object instance, use the `Is` or `IsNot` operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d30ce-115">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d30ce-115">See Also</span></span>  
- [<span data-ttu-id="d30ce-116">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d30ce-116">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)  
- [<span data-ttu-id="d30ce-117">Is 연산자</span><span class="sxs-lookup"><span data-stu-id="d30ce-117">Is Operator</span></span>](../../visual-basic/language-reference/operators/is-operator.md)  
- [<span data-ttu-id="d30ce-118">방법: 두 개체가 관련이 있는지 여부를 결정 합니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-118">How to: Determine Whether Two Objects Are Related</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-related.md)  
- [<span data-ttu-id="d30ce-119">방법: 두 개체가 동일한 지 여부를 결정 합니다.</span><span class="sxs-lookup"><span data-stu-id="d30ce-119">How to: Determine Whether Two Objects Are Identical</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-identical.md)
+## <a name="see-also"></a><span data-ttu-id="e46e3-115">참고자료</span><span class="sxs-lookup"><span data-stu-id="e46e3-115">See also</span></span>
+- [<span data-ttu-id="e46e3-116">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e46e3-116">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="e46e3-117">Is 연산자</span><span class="sxs-lookup"><span data-stu-id="e46e3-117">Is Operator</span></span>](../../visual-basic/language-reference/operators/is-operator.md)
+- [<span data-ttu-id="e46e3-118">방법: 두 개체가 관련이 있는지 여부를 결정 합니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-118">How to: Determine Whether Two Objects Are Related</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-related.md)
+- [<span data-ttu-id="e46e3-119">방법: 두 개체가 동일한 지 여부를 결정 합니다.</span><span class="sxs-lookup"><span data-stu-id="e46e3-119">How to: Determine Whether Two Objects Are Identical</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-identical.md)
